--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,23 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+/* #root {
   text-align: center;
+  background-size: cover;
+  background-image: url("src\assets\astronaut.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
 }
-
+body {
+  background-image: url("src\assets\astronaut.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -39,4 +52,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
